<resources>
    <string name="app_name">&appname;</string>
    <string name="hosp_name">&hosp_name;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mail"><u>support : mappsdev-noida@cdac.in</u></string>
    <string name="support_text"><a href="mailto:mappsdev-noida@cdac.in">support : mappsdev-noida@cdac.in</a></string>
    <string name="title_home">Home</string>
    <string name="title_enter_new_cr">New CR</string>
    <string name="Loading....">Loading....</string>
    <string name="tv_last_name">Last Name*</string>
    <string name="tv_age">Age*</string>
    <string name="tv_gender">Gender*</string>
    <string name="tv_mobile_number">Mobile Number*</string>
    <string name="tv_email">Email</string>
    <string name="tv_state">State</string>
    <string name="tv_district">District</string>
    <string name="page1">Page 1</string>
    <string name="page2">Page 2</string>
    <string name="page3">Page 3</string>
    <string name="click_on_camera_icon"><u>Tap icon to upload supporting clinical notes along with Rx (optional).</u></string>
    <string name="i_need_help_with">I need help with</string>
    <string name="help_back_button">Back</string>
    <string name="how_to_login">How to login?</string>
    <string name="how_to_login_description">
        <![CDATA[
        This app allows patients to login using their mobile number.

        <ol>
        <li> At the home screen, tap on <b><i>Patient Login</i></b> at the lower left corner of the screen.</li>
        <li> Enter your 10-digit valid mobile number.</li>
        <li> Enter the One-Time Password (OTP) is sent to your mobile number as an SMS.</li>
        <li> After successful verification you will be shown the main menu, where you can raise and track Teleconsultancy requests.</li>
        </ol>
        ]]>
    </string>
    <string name="quick_steps">Quick Steps for Teleconsultancy Request</string>
    <string name="quick_steps_description">
        <![CDATA[
        After login, you can follow these steps:



        <ol>
        <li> To raise a new request, tap on the Teleconsultancy Request icon (<img src=\"econsultation_icon\"/>) from the main menu.</li>
        <li> Select patient, hospital, telemedicine department and appointment slot. Submit your Teleconsultancy request, with supporting document images (if needed).</li>
        <li> You can check the status of request in the Consultation and Status (<img src=\"econsult_status\"/>) option from the main menu.</li>
        <li> Once request is approved by a doctor, you will get a notification and the <b>Join Call</b> button will be shown with your request.</li>
        <li> You will get a notification when the doctor calls you, and you can join the call from the <b>Join Call</b> button on Consultation and Status (<img src=\"econsult_status\"/>) page.</li>
        <li> After the doctor has completed the request, you can view prescription from the Consultation and Status (<img src=\"econsult_status\"/>) page.</li>
        </ol>
        ]]>
    </string>
    <string name="how_to_upload_documents">How to upload documents?</string>
    <string name="how_to_upload_documents_description">
        <![CDATA[
        With each Teleconsultancy request, you can upload upto three images of supporting documents for the doctor\'s reference. These may include images of past prescriptions, lab test reports or images of infected site(s). The following steps describe how to upload documents:
        <br>
        <ol>
        <li> After filling in the Teleconsultancy request form, a pop-up will prompt and ask if you wish to upload supporting documents.</li>
        <li> Click on <b>Yes</b> if you want to upload images of any documents.</li>
        <li> The next screen shows three slots for image upload. Tap on a slot to open the device camera. Take a clear image of the document you wish to upload. You may retake the image if needed. </li>
        <li> Click on <b>OK</b> and wait for the image to upload. The confirmation message <b><i>Successfully Uploaded</i></b> will be shown, otherwise please re-take the image and upload again.</li>
        <li> Repeat the steps for other images you wish to upload. After uploading click on <b>Done</b> to submit the Teleconsultancy request.</li>
        </ol>
        ]]>
    </string>
    <string name="how_to_raise_a_new_request">How to raise a new request?</string>
    <string name="how_to_raise_a_new_request_description">
        <![CDATA[
        You can raise a new Teleconsultancy request by clicking on the <b>Teleconsultancy request</b> button (<img src=\"econsultation_icon\"/>) from the main menu.
        <br>
        <ol>
        <li> Select the patient name from the Teleconsultancy request page. If you need to raise request for your self, select <b><i>Myself</i></b>. Otherwise, click on <b><i>Someone Else</i></b> and enter basic patient identification details.</li>
        <li> Select the hospital and telemedicine unit for which you want to raise a request.</li>
        <li> Provide basic details for raising request, such as symptoms, past medication, allergies and problem description.</li>
        <li> Select a suitable date and an available free slot from the list, then click on submit.</li>
        <li> You can also upload upto 3 images for doctor\'s reference including past prescriptions, lab reports, images of infected site etc.</li>
        <li> Teleconsultancy request will be booked and confirmation will be shown. You can check the status in the Consultation and Status page (<img src=\"econsult_status\"/>).</li>
        </ol>
        ]]>
    </string>
    <string name="how_to_track_request">How to check Consultation and Status?</string>
    <string name="how_to_track_request_description">
        <![CDATA[
        You can track requests from the <b><i>Consultation and Status</b></i> option (<img src=\"econsult_status\"/>) from the main menu. A request can have the following status:

        <ol>
        
        <li> <b>Approved: </b> The doctor will approve your request and change it to <i>Approved</i> status. You will receive a notification when the doctor calls you for the eConsultation. You can join the call from the <b>Join Call</b> button shown for these requests.</li>
        <li> <b>Completed: </b> After the Teleconsultation is done, the request is <i>Completed</i>. You can now view the prescription from the <b>View Prescription</b> option shown below the request.</li>
        <li> <b>Rejected: </b> If the doctor rejects your request, its status is changed to <i>Rejected</i>. You can view the message from the doctor using the <b>View Doctor\'s Message</b> option shown below the request. You may wish to submit a new request, if needed.</li>
        </ol>
        ]]>
    </string>
    <string name="how_to_view_prescription">How to view prescription?</string>
    <string name="how_to_view_prescription_description">
        <![CDATA[
           Patients can view prescriptions for <b>Completed</b> Teleconsultancy requests.
           <ol>
           <li>After logging in, go to <b><i>Consultation and Status</i></b> option (<img src=\"econsult_status\"/>) from the main menu.</li>
           <li>Find the request which has been <b>Completed</b> and tap on <b>View Prescription</b> option shown below that request.</li>
           <li>Prescription will be downloaded as a PDF within the app itself.</li>
           </ol>
        ]]>
    </string>
    <string name="other_issue">Any other issue?</string>
    <string name="other_issue_description">
        <![CDATA[
          For any other issues, please email <a href=\"mailto:mappsdev-noida@cdac.in\">mappsdev-noida@cdac.in</a>  with details of your issue.
          <br><br>
          You can get the latest app updates from <a href=\"https://play.google.com/store/apps/details?id=com.cdac.uphmis\">Google Play Store</a>.
        ]]>
    </string>
    <string name="tv_further_assistance">
        <![CDATA[
]]>
        </string>
    <string name="department_Name">department Name</string>
    <string name="btn_back">Back</string>
    <string name="tv_tnc">
        <![CDATA[
By using the app, you agree to <b> <font color=\'#FF9F00\'><u> terms </u></font></b>
]]>
        </string>
    <string name="permission_needed">What permissions does the app need?</string>
    <string name="permission_needed_description">
    <![CDATA[
      Users (patients) should enable the following permissions while using the app to use all its features.
      <ol>
      <li><b>Appear on Top</b> - This permission is used to deliver call-like full screen notifications when the doctor initiates a video call to the patient. <b><i>Please allow this permission to receive real-time notification when the doctor calls you.</b></i></li>
      <li><b>Notifications</b> - This app provides notifications to patients when doctor approves, rejects, completes or sends messages against teleconsultation requests raised by patients. <b><i> Please enable notifications for this app to get updates of your teleconsultation request status.</b></i> </li>
      <li><b>Camera</b> - The app uses the device camera to allow the user to upload images of supporting documents while raising a teleconsultation request. This may include images of past prescriptions, lab reports or images of infected sites.</li>
      <li><b>Storage</b> - The app uses the device storage for saving prescriptions of teleconsultation requests.</li>
      </ol>
    ]]>
</string>
    <string name="save_receipt"><b><u>Save Receipt</u></b></string>
    <string name="ob_header1">TELECONSULTATION</string>
    <string name="ob_header2">BOOK APPOINTMENT</string>
    <string name="ob_header3">LAB REPORTS</string>
    <string name="ob_header4">ENQUIRY</string>
    <string name="ob_header5">REGISTRATION</string>
    <string name="ob_get_started">GET STARTED</string>
    <string name="self_assess">Self Assess</string>
    <string name="note_document_required">Necessary Documents required: (page numbers should be necessarily mentioned.)</string>
    <string name="change_language">Change Language</string>
    <string name="my_account">My Account</string>
    <string name="about_us">About us</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="switch_user">Switch User</string>
    <string name="logout">Logout</string>
    <string name="done">done</string>
    <string name="diagnosis_colon">Diagnosis:</string>
    <string name="section_a">Section A</string>
    <string name="choose_reimbursement_type">Choose Reimbursement Type</string>
    <string name="name_of_the_hospital">Name of the Hospital</string>
    <string name="date_of_admission">Date of Admission</string>
    <string name="date_of_discharge">Date of Discharge</string>
    <string name="enter_diagnosis">Enter Diagnosis</string>
    <string name="total_hospital_bill_amount">Total Hospital Bill Amount</string>
    <string name="total_amount_claimed">Total Amount Claimed</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="proceed">Proceed</string>
    <string name="description">Description</string>
    <string name="side">Side</string>
    <string name="nr">NR</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="bilateral">Bilateral</string>
    <string name="add">Add</string>
    <string name="icd_code">ICD Code</string>
    <string name="snomed_ct">SNOMED-CT</string>
    <string name="icd_code_search">ICD code search</string>
    <string name="disease">Disease</string>
    <string name="provisional">Provisional</string>
    <string name="differential">Differential</string>
    <string name="final_text">Final</string>
    <string name="why_do_you_want_to_cancel_this_appointment">Why do you want to cancel this appointment?</string>
</resources>