<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/patient_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/my_account"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/my_account" />

        <item
            android:id="@+id/aboutus"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about_us" />
        <item
            android:id="@+id/language"
            android:icon="@drawable/ic_language"
            android:title="@string/change_language" />
        <item
            android:id="@+id/theme"
            android:icon="@drawable/theme"
            app:actionLayout="@layout/ic_switch_item"
            android:title="@string/dark_mode" />
        <item
            android:id="@+id/self_assess"
            android:icon="@drawable/self_assess_icon"
            android:title="@string/self_assess"/>
        <item
            android:id="@+id/switch_user"
            android:icon="@drawable/user"
            android:title="@string/switch_user"/>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_highlight_off_black_24dp"
            android:title="@string/logout" />

    </group>



</menu>
