<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    app:cardCornerRadius="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:background="@android:color/white"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:background="@color/label_background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="@font/lucidasans"
                    android:text="@string/diagnosis_colon"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_diagnosis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/mic_folating_button" />
            </RelativeLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/ll_chips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="08dp"
                android:orientation="horizontal"
                app:alignContent="space_around"
                app:alignItems="stretch"
                app:flexWrap="wrap"
                app:showDivider="beginning|middle|end" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="08dp"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icd_code" />

                <Switch
                    android:id="@+id/switch_diagnosis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snomed_ct" />
            </LinearLayout>


            <!-- <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp">-->

            <AutoCompleteTextView
                android:id="@+id/autocomplete_diagnosis_icd_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/icd_code_search"
                android:visibility="gone" />
            <!-- </com.google.android.material.textfield.TextInputLayout>-->

            <!--    <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">-->

            <AutoCompleteTextView
                android:id="@+id/autocomplete_diagnosis_disease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/disease"
                android:visibility="gone" />
            <!--    </com.google.android.material.textfield.TextInputLayout>-->


            <!--     <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp">-->

            <AutoCompleteTextView
                android:id="@+id/autocomplete_diagnosis_snomed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="Diagnosis"
                android:visibility="visible" />
            <!--  </com.google.android.material.textfield.TextInputLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_side"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingVertical="04dp"
                    android:text="@string/side" />

                <TextView
                    android:id="@+id/tv_nr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingVertical="04dp"
                    android:text="@string/nr" />

                <TextView
                    android:id="@+id/tv_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingVertical="04dp"
                    android:text="@string/left" />

                <TextView
                    android:id="@+id/tv_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingVertical="04dp"
                    android:text="@string/right" />

                <TextView
                    android:id="@+id/tv_bilateral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingVertical="04dp"
                    android:text="@string/bilateral" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="08dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_provisional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingVertical="04dp"
                    android:text="@string/provisional" />

                <TextView
                    android:id="@+id/tv_differential"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingVertical="04dp"
                    android:text="@string/differential" />

                <TextView
                    android:id="@+id/tv_final"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingVertical="04dp"
                    android:text="@string/final_text" />


            </LinearLayout>

            <EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="08dp"
                android:background="@drawable/box"
                android:gravity="top"
                android:hint="@string/description"
                android:padding="08dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/btn_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginHorizontal="08dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_shape"
                    android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
                    android:text="@string/done"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginHorizontal="08dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_shape"
                    android:drawableLeft="@android:drawable/ic_input_add"
                    android:text="@string/add"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView></androidx.cardview.widget.CardView>